# vkusvill-jdun

./: .dockerignore  .env.example  .gitignore  Dockerfile.api.dev  Dockerfile.web.dev  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_courier_type_to_shifts.py  003_add_courier_profile_fields.py
app/: __init__.py  admin_security.py  config.py  db.py  deps.py  enums.py  main.py  models.py  schemas.py
app/routers/: admin.py  auth.py  courier.py
app/services/: audit.py  bookings.py  shifts.py
doc/: распределение_смен_курьеров_c83a770a_plan.md
docker/: entrypoint-api-dev.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AdminSchedule.tsx  App.tsx  CourierSelfSignup.tsx  CourierSlotPlanner.tsx  WeekCalendar.tsx  dates.ts  index.css  types.ts
